<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_backgammon"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?android:colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- Player 1 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/space_large"
                    android:text="@string/player1"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/text_size_h3"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/player_1_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/space_huge"
                    android:text="@string/score_value"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="@dimen/text_size_huge" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/space_small"
                    android:layout_marginLeft="@dimen/space_huge"
                    android:layout_marginRight="@dimen/space_huge"
                    android:onClick="addOneForPlayer1"
                    android:text="@string/one_point" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/space_small"
                    android:layout_marginLeft="@dimen/space_huge"
                    android:layout_marginRight="@dimen/space_huge"
                    android:onClick="addTwoForPlayer1"
                    android:text="@string/two_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/space_small"
                    android:layout_marginLeft="@dimen/space_huge"
                    android:layout_marginRight="@dimen/space_huge"
                    android:onClick="addThreeForPlayer1"
                    android:text="@string/three_points" />

            </LinearLayout>

            <!-- Vertical line -->
            <View
                android:layout_width="@dimen/line_dimen"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_large"
                android:background="@android:color/darker_gray" />

            <!-- Player 2 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/space_large"
                    android:text="@string/player2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_h3"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/player_2_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/space_huge"
                    android:text="@string/score_value"
                    android:textColor="@color/green_light"
                    android:textSize="@dimen/text_size_huge" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/space_small"
                    android:layout_marginLeft="@dimen/space_huge"
                    android:layout_marginRight="@dimen/space_huge"
                    android:onClick="addOneForPlayer2"
                    android:text="@string/one_point" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/space_small"
                    android:layout_marginLeft="@dimen/space_huge"
                    android:layout_marginRight="@dimen/space_huge"
                    android:onClick="addTwoForPlayer2"
                    android:text="@string/two_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/space_small"
                    android:layout_marginLeft="@dimen/space_huge"
                    android:layout_marginRight="@dimen/space_huge"
                    android:onClick="addThreeForPlayer2"
                    android:text="@string/three_points" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_transp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="0dp">

        <!-- Horizontal line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_dimen"
            android:background="@color/colorPrimary" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="resetScore"
            android:paddingBottom="@dimen/space_button_small"
            android:paddingLeft="@dimen/space_button_large"
            android:paddingRight="@dimen/space_button_large"
            android:paddingTop="@dimen/space_button_small"
            android:layout_marginTop="@dimen/space_medium"
            android:layout_marginBottom="@dimen/space_medium"
            android:text="@string/reset"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
